<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/enunny_logo"
        app:layout_constraintBottom_toTopOf="@+id/play_button_main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play_button_main_menu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/play_button_main_menu"
        app:layout_constraintBottom_toTopOf="@+id/story_button_main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image"
        android:background="@drawable/rounded_button"
        android:textColor="@color/buttontextcollor" />

    <Button
        android:id="@+id/story_button_main_menu"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/story_button_main_menu"
        app:layout_constraintBottom_toTopOf="@+id/lullaby_button_main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button_main_menu"
        android:background="@drawable/rounded_button"
        android:textColor="@color/buttontextcollor"
        />

    <Button
        android:id="@+id/lullaby_button_main_menu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/lullaby_button_main_menu"
        app:layout_constraintBottom_toTopOf="@+id/settings_button_main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_button_main_menu"
        android:background="@drawable/rounded_button"
        android:textColor="@color/buttontextcollor"
        />


    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/settings_button_main_menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/settings_button_main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_settings_black_24dp"
        android:background="?android:attr/selectableItemBackground"
        />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/help_button_main_menu"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/question_mark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button"
        android:src="@drawable/ic_help_outline_black_24dp"
        />



</android.support.constraint.ConstraintLayout>